name:                todo-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iarekk/todo-app#readme
license:             MIT
license-file:        LICENSE
author:              Iarek Kovtunenko
maintainer:          iarek.kovtunenko@gmail.com
copyright:           2020 Iarek Kovtunenko
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable todo-app
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parsers, Storage, Types
  default-language:    Haskell2010
  ghc-options:         -Werror -fwarn-incomplete-patterns
  build-depends:       MissingH
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , either
                     , listsafe
                     , optparse-applicative
                     , strict
                     , text
                     , time
                     , yaml

